<resources>
    <string name="app_name">Zealand-electric</string>
    <string name="main_text">Zealand</string>
    <string name="login_text">Login</string>
    <string name="login_brugernavn">Brugernavn</string>
    <string name="login_password">Adgangskode</string>
    <string name="login_Login">LOGIN</string>
    <string name="checklistbutton1">Checklist1</string>
    <string name="checklistbutton2">Checklist2</string>
    <string name="CreateChecklist">Opret Checkliste</string>
    <string name="AddWorker">Opret ny arbejder</string>
    <string name="ConfirmChecklist">Godkend Checklist</string>
    <string name="Anuller_text">Anuller</string>
    <string name="Gem_text">Gem</string>
    <string name="Gem_afslut">Gem Og Videre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinnerRole">
        <item>User</item>
        <item>Admin</item>
    </string-array>

</resources>