<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="26dp">


        <Button
            android:id="@+id/ConfirmChecklistButton"
            android:layout_width="165dp"
            android:layout_height="57dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/ConfirmChecklist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:backgroundTint="@color/zealandBlack"
            android:clickable="true"
            android:padding="10sp"
            android:textColor="@color/zealandYellow" />


        <Button
            android:id="@+id/AddWorkerButton"
            android:layout_width="165dp"
            android:layout_height="57dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="28dp"
            android:text="@string/AddWorker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:backgroundTint="@color/zealandBlack"
            android:clickable="true"
            android:padding="10sp"
            android:textColor="@color/zealandYellow"
            />

        <Button
            android:id="@+id/CreateChecklistButton"
            android:layout_width="363dp"
            android:layout_height="59dp"
            android:layout_marginTop="116dp"
            android:backgroundTint="@color/zealandBlack"
            android:clickable="true"
            android:padding="10sp"
            android:text="@string/CreateChecklist"
            android:textColor="@color/zealandYellow"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="373dp"
            android:layout_height="380dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Checklist1Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checklistbutton1"

                    android:backgroundTint="@color/zealandBlack"
                    android:clickable="true"
                    android:padding="10sp"
                    android:textColor="@color/zealandYellow"/>

                <Button
                    android:id="@+id/Checklist2Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checklistbutton2"

                    android:backgroundTint="@color/zealandBlack"
                    android:clickable="true"
                    android:padding="10sp"
                    android:textColor="@color/zealandYellow"/>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>